updated by Jega

--- a/src/index.html
+++ b/src/index.html
@@ -1,21 +1,33 @@
 <html>
     <head>
-        <link rel="stylesheet" href="styles.css" />
+       <link rel="stylesheet" href="./styles.css">
         <title>My Profile</title>
+        <style>
+            h2{
+                font-style: italic;
+            }
+            h1{
+                color: green;
+            }
+
+        </style>
     </head>
     <body>
-        <h3>Edison Zhuang</h3>
-        <img class="avatar" src="https://m.media-amazon.com/images/I/71qokUI2ypL._AC_SX679_.jpg" />
-        <p>My name is Edison. I am a software developer. I am proficient in:</p>
+        <h1 style="color: red;">Jega</h1>
+        <h2>SE Student</h2>
+        <h3>Software Engineering</h3>
+        <p>Hi I am an aspiring Software Developer</p>
+        <img class="avatar" src="https://picsum.photos/200" alt="">
+        <!-- This is a comment-->
+        <p>I am proficient in:</p>
         <ul>
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>JavaScript</li>
-            <li>React</li>
+            <li id="react">React</li>
+            <li>Java</li>
             <li>Spring Boot</li>
-            <li>DevOps</li>
-            <li>React Native</li>
+            <li><strong>Scrum</strong></li>
         </ul>
-        <p>Check out my full profile at <a href="https://linkedin.com/in/edisonzsq" />LinkedIn</p>
+        <p>Contact me at <a href="https://google.com" target="_blank">Google</a></p>
+        <!---->
+
     </body>
 </html>
